# Checkers_Game_Qt_Cplusplus_QML

./: .gitignore  CMakeLists.txt  README.md
qml/: CMakeLists.txt  Checkerboard.qml  Crown.qml  GameArea.qml  Main.qml  Piece.qml
qml/overlays/: EndGameOverlay.qml  EscapeMenuOverlay.qml
src/: CMakeLists.txt  controller.cpp  controller.h  coordinates.cpp  coordinates.h  coordinates_database.cpp  coordinates_database.h  game.cpp  game.h  game_config.h  game_coordinator.cpp  game_coordinator.h  game_end_reason.h  game_result_info.h  main.cpp  multi_capture_manager.h  overlay_manager.cpp  overlay_manager.h  piece.cpp  piece.h  pieces_manager.cpp  pieces_manager.h  player.h  player_manager.h  qml_helper.h
src/model/: model.cpp  model.h  pieces_model.cpp  pieces_model.h
src/piece_managers/: piece_capture_manager.cpp  piece_capture_manager.h  piece_movement_animation_manager.h  piece_movement_manager.cpp  piece_movement_manager.h  piece_promotion_manager.cpp  piece_promotion_manager.h  piece_state_manager.cpp  piece_state_manager.h
src/state_machine/: game_state_manager.h  game_state_type.h  i_state_actions.h
src/state_machine/states/: ended_victory_north_player.h  ended_victory_south_player.h  running_state.h
tests/: CMakeLists.txt
tests/src/: common_test_fixture.h  coordinates_generation_test.cpp  piece_capture_test.cpp  piece_movement_test.cpp  piece_promotion_test.cpp  promoted_piece_capture_test.cpp  promoted_piece_movement_test.cpp
